--- a/app/views/branded/static_pages/promote.html.erb
+++ b/app/views/branded/static_pages/promote.html.erb
@@ -3,9 +3,10 @@
 
   <p><%= _('Help spread the word about the DMPTool! Use the materials below to inform researchers, librarians, administrators and others about the tool. All materials are available under a CC-Zero license.') %></p>
 
-  <h2><%= _('DMPTool logo') %></h2>
+  <h2><%= _('DMP Tool logos - landscape orientation') %></h2>
   <p>
-    <%= _('DMPTool Logo (blue), with tagline') %>
+    <%= _('Black - no tagline') %>
+    <img src="https://github.com/CDLUC3/dmptool/blob/master/docs/logos/DMP_Tool.svg"/>
     <ul>
       <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/logos/DMPTool_logo_blue.eps">EPS</a></li>
       <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/logos/DMPTool_logo_blue.svg">SVG</a>
@@ -46,46 +47,6 @@
     <ul>
       <li><%= _('Postcard 1') %> <a href="https://github.com/CDLUC3/dmptool/blob/master/docs/postcard/DMPTool_postcard1.pdf"><%= ('Adobe PDF') %></a>
       <li><%= _('Postcard 2') %> <a href="https://github.com/CDLUC3/dmptool/blob/master/docs/postcard/DMPTool_postcard2.pdf"><%= ('Adobe PDF') %></a>
-    </ul>
-  </p>
-  <hr>
-
-  <h2><%= _('Talking points') %></h2>
-  <p>
-    <%= _('Need to get others on your campus interested in the DMPTool? Use our Talking Points to guide your discussions. In general, a talking points document is designed to help you stay on track during meetings with those outside of your department. It ensures that your major points are at hand and helps you make progress towards the goals of the meeting.') %>
-    <ul>
-      <li><%= _('Overview of Talking Points:') %>
-        <ul>
-          <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/talkpoints/overview.pdf"><%= ('Adobe PDF') %></a></li>
-        </ul>
-      </li>
-      <li><%= _('Meeting with your IT Group:') %>
-        <ul>
-          <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/talkpoints/IT.docx"><%= ('Microsoft Word') %></a></li>
-          <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/talkpoints/IT.pdf"><%= ('Adobe PDF') %></a></li>
-        </ul>
-      </li>
-      <li><%= _('Meeting with Administrators:') %>
-        <ul>
-          <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/talkpoints/admin.docx"><%= ('Microsoft Word') %></a></li>
-          <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/talkpoints/admin.pdf"><%= ('Adobe PDF') %></a></li>
-        </ul>
-      </li>
-      <li><%= _('Meeting with Researchers:') %>
-        <ul>
-          <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/talkpoints/researchers.docx"><%= ('Microsoft Word') %></a></li>
-          <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/talkpoints/researchers.pdf"><%= ('Adobe PDF') %></a></li>
-        </ul>
-      </li>
-    </ul>
-  </p>
-  <hr>
-
-  <h2><%= _('General purpose slides') %></h2>
-  <p>
-    <%= _('We created a generic slide deck that you can use to introduce researchers and others to the DMPTool.') %>
-    <ul>
-      <li><a href="https://github.com/CDLUC3/dmptool/blob/master/docs/genericslides/DMPTool-Generic-Slides.pptx"><%= _('Microsoft Powerpoint') %></a></li>
     </ul>
   </p>
 </div>
