tweaks to static pages for new look/feel

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @use "dmptool/authentication";
 @use "dmptool/guidance";
 @use "dmptool/public_plans";
+@use "dmptool/promotion";
 
 // @use "utils";
 
