--- a/app/views/branded/layouts/_header.html.erb
+++ b/app/views/branded/layouts/_header.html.erb
@@ -17,7 +17,7 @@
       <% end %>
 
 
-      <li><%= link_to _("Public DMPs"), public_plans_path %></li>
+      <li><%= link_to _("Public Plans"), public_plans_path %></li>
       <li><%= link_to _("Funder Requirements"), public_templates_path %></li>
 
       <% if user_signed_in? %>
@@ -113,7 +113,7 @@
         <li><%= link_to _("Create Plan"), new_plan_path %></li>
       <% end %>
 
-      <li><%= link_to _("Public DMPs"), public_plans_path %></li>
+      <li><%= link_to _("Public Plans"), public_plans_path %></li>
       <li><%= link_to _("Funder Requirements"), public_templates_path %></li>
 
       <% if user_signed_in? %>
