Updates to the static page content

--- a/app/assets/stylesheets/dmptool_v5/app.scss
+++ b/app/assets/stylesheets/dmptool_v5/app.scss
@@ -345,6 +345,7 @@ code {
   padding: 1rem 0.7rem;
   display: flex;
   align-items: center;
+  gap: 15px;
 }
 .dmpui-frontend-header .header-logo img {
   max-width: 260px;
