--- a/app/views/branded/layouts/_header.html.erb
+++ b/app/views/branded/layouts/_header.html.erb
@@ -20,11 +20,18 @@
       <li><%= link_to _("Public Plans"), public_plans_path %></li>
       <li><%= link_to _("Funder Requirements"), public_templates_path %></li>
 
-      <% if user_signed_in? %>
-        <li><%= link_to _("Help"), help_path %></li>
-      <% else %>
-        <li><%= link_to _("About"), about_us_path %></li>
-      <% end %>
+      <li>
+        <div class="dmpui-dropdown">
+          <span><a href="#"><%= _('About') %></a></span>
+          <div class="dmpui-dropdown-content">
+            <p><%= link_to _('Learn more'), about_us_path, role: 'menuitem' %></p>
+            <p><%= link_to _('Institutional membership'), join_us_path, role: 'menuitem' %></p>
+            <p><%= link_to _('FAQs'), faq_path, role: 'menuitem' %></p>
+            <p><%= link_to _('Editorial board'), editorial_board_path, role: 'menuitem' %></p>
+            <p><%= link_to _('DMP Tool Logos'), promote_path, role: 'menuitem' %></p>
+          </div>
+        </div>
+      </li>
 
       <% if user_signed_in? && current_user.can_org_admin? %>
         <li>
