added a bit of space to bottom of static pages

--- a/app/assets/stylesheets/dmptool_v5/overrides.scss
+++ b/app/assets/stylesheets/dmptool_v5/overrides.scss
@@ -221,7 +221,8 @@ img.org-logo {
 }
 
 #maincontent > div.static-page {
-  max-width: 95%
+  max-width: 95%;
+  margin-bottom: 25px;
 }
 
 #maincontent > div.row {
