final updates to the v5 styling and content

--- a/app/views/branded/layouts/_footer.html.erb
+++ b/app/views/branded/layouts/_footer.html.erb
@@ -13,11 +13,11 @@
       <div class="footer-links-quicklinks">
         <h4><%= _('Quick links') %></h4>
         <ul>
-          <li><%= link_to _("Contact"), contact_us_path %></li>
-          <li><%= link_to _("Public DMPs"), public_plans_path %></li>
           <li><%= link_to _("Funder Requirements"), public_templates_path %></li>
+          <li><%= link_to _("Public Plans"), public_plans_path %></li>
           <li><%= link_to _("Help"), help_path %></li>
           <li><%= link_to _("Terms & Privacy"), terms_path %></li>
+          <li><%= link_to _("Contact"), contact_us_path %></li>
           <li><%= link_to _("Login"), auth_path %></li>
         </ul>
       </div>
