--- a/app/views/branded/layouts/_header.html.erb
+++ b/app/views/branded/layouts/_header.html.erb
@@ -27,7 +27,7 @@
             <p><%= link_to _('Learn more'), about_us_path, role: 'menuitem' %></p>
             <p><%= link_to _('Institutional membership'), join_us_path, role: 'menuitem' %></p>
             <p><%= link_to _('FAQs'), faq_path, role: 'menuitem' %></p>
-            <p><%= link_to _('Editorial board'), editorial_board_path, role: 'menuitem' %></p>
+            <p><%= link_to _('Editorial Board'), editorial_board_path, role: 'menuitem' %></p>
             <p><%= link_to _('DMP Tool Logos'), promote_path, role: 'menuitem' %></p>
           </div>
         </div>
@@ -130,7 +130,7 @@
             <li><%= link_to _('Learn more'), about_us_path, role: 'menuitem' %></li>
             <li><%= link_to _('Institutional membership'), join_us_path, role: 'menuitem' %></li>
             <li><%= link_to _('FAQs'), faq_path, role: 'menuitem' %></li>
-            <li><%= link_to _('Editorial board'), editorial_board_path, role: 'menuitem' %></li>
+            <li><%= link_to _('Editorial Board'), editorial_board_path, role: 'menuitem' %></li>
             <li><%= link_to _('DMP Tool Logos'), promote_path, role: 'menuitem' %></li>
           </ul>
         </div>
