--- a/app/views/branded/layouts/_header_reactapp.html.erb
+++ b/app/views/branded/layouts/_header_reactapp.html.erb
@@ -51,7 +51,7 @@
         <li><%= link_to _("Create Plan"), new_plan_path %></li>
       <% end %>
       <li><%= link_to _("Funder Requirements"), public_templates_path %></li>
-      <li><%= link_to _("Public DMPs"), public_plans_path %></li>
+      <li><%= link_to _("Public Plans"), public_plans_path %></li>
       <li><%= link_to _("Help"), help_path %></li>
     </ul>
   </nav>
