--- a/app/views/branded/paginable/plans/_org_admin.html.erb
+++ b/app/views/branded/paginable/plans/_org_admin.html.erb
@@ -12,7 +12,7 @@
 
 <p><%= _("Note: You can filter this table by 'Created' dates. Enter the month abbreviation and a 4 digit year into the search box above.<br>For example: 'Oct 2019' or 'Jun 2013'.").html_safe %></p>
 
-<p><%= _('Featured plans are displayed first on the \'Public DMPs\' page. A plan must be publicly visible to be \'featured\'.') %></p>
+<p><%= _('Featured plans are displayed first on the \'Public plans\' page. A plan must be publicly visible to be \'featured\'.') %></p>
 
 <div class="table-responsive">
   <table class="table table-hover" id="my-plans">
