--- a/app/views/branded/public_pages/plan_index.html.erb
+++ b/app/views/branded/public_pages/plan_index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :home do %>
   <div class="row">
     <h1><%= _('Public Plans') %></h1>
-    <p><%= _('Public DMPs are plans created using the DMP Tool service and shared publicly by their owners. They are not vetted for quality, completeness, or adherence to funder guidelines.') %></p>
+    <p><%= _('Public plans are plans created using the DMP Tool service and shared publicly by their owners. They are not vetted for quality, completeness, or adherence to funder guidelines.') %></p>
   </div>
   <div class="c-faceting">
     <div class="c-facet-controls">
