--- a/app/views/branded/static_pages/about_us.html.erb
+++ b/app/views/branded/static_pages/about_us.html.erb
@@ -68,4 +68,9 @@
       </li>
     </ul>
   </p>
+  <hr>
+
+  <p>
+  <a href="<%= auth_path %>" class="dmpui-frontend-btn dmpui-frontend-btn-primary with-mark"><%= _('Sign Up') %></a>
+  </p>
 </div>
