--- a/app/views/plans/_share_form.html.erb
+++ b/app/views/plans/_share_form.html.erb
@@ -34,7 +34,7 @@
           <%= f.radio_button :visibility, :publicly_visible,
                              data: { url: visibility_plan_path(@plan),
                                      remote: true, method: :post }  %>
-          <%= _('Public: anyone can view or download from the Public DMPs page') %>
+          <%= _('Public: anyone can view or download from the Public Plans page') %>
         <% end %>
       </div>
     </div>
