--- a/app/views/sitemaps/_signed_in.html.erb
+++ b/app/views/sitemaps/_signed_in.html.erb
@@ -12,7 +12,7 @@
 <h2><%= _('General') %></h2>
 <ul>
   <li><%= link_to _('Funder requirements'), public_templates_path %></li>
-  <li><%= link_to _('Public DMPs'), public_plans_path %></li>
+  <li><%= link_to _('Public Plans'), public_plans_path %></li>
   <li><%= link_to _('Participating institutions'), public_orgs_path %></li>
   <li><%= link_to _('About'), about_us_path %></li>
   <li><%= link_to _('Contact us'), contact_us_path %></li>
