--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -37,7 +37,7 @@
           <ul>
             <li><%= _("Private: restricted to you and your collaborators.") %></li>
             <li><%= _("Organisational: anyone at your organisation can view your plan.") %></li>
-            <li><%= _("Public: anyone can view your plan in the Public DMPs list.") %></li>
+            <li><%= _("Public: anyone can view your plan in the Public Plans list.") %></li>
           </ul>
 
           <p><%= _("By default all new and test plans will be set to ‘Private’ visibility. ‘Public’ and ‘Organisational’ visibility are intended for finished plans. You must answer at least 50% of the questions to enable these options.") %></p>
