--- a/app/views/branded/paginable/plans/_privately_visible.html.erb
+++ b/app/views/branded/paginable/plans/_privately_visible.html.erb
@@ -88,7 +88,7 @@
                 <% end %>
               <% end %>
               <% role = my_plan_roles.first %>
-              <% conf = (role.creator? && plan.publicly_visible?) ? _("Are you sure you wish to remove this public plan? This will remove it from the Public DMPs page but any collaborators will still be able to access it.") : _("Are you sure you wish to remove this plan? Any collaborators will still be able to access it.") %>
+              <% conf = (role.creator? && plan.publicly_visible?) ? _("Are you sure you wish to remove this public plan? This will remove it from the Public Plans page but any collaborators will still be able to access it.") : _("Are you sure you wish to remove this plan? Any collaborators will still be able to access it.") %>
               <li><%= link_to _('Remove'), deactivate_role_path(role), 'data-method': 'put', rel: 'nofollow', 'data-confirm': conf, aria: { label: "Remove #{plan.title}"} %></li>
             </ul>
           </div>
