--- a/app/views/public_pages/plan_index.html.erb
+++ b/app/views/public_pages/plan_index.html.erb
@@ -1,11 +1,11 @@
-<% title _('Public DMPs') %>
+<% title _('Public Plans') %>
 <div class="row">
   <div class="col-md-12">
-    <h1><%= _('Public DMPs') %></h1>
+    <h1><%= _('Public Plans') %></h1>
     <!-- if the user has projects -->
     <% if @plans.count > 0 %>
       <p class="left-indent">
-        <%= _('Public DMPs are plans created using the %{application_name} service and shared publicly by their owners. They are not vetted for quality, completeness, or adherence to funder guidelines.') % {application_name: ApplicationService.application_name} %>
+        <%= _('Public plans are plans created using the %{application_name} service and shared publicly by their owners. They are not vetted for quality, completeness, or adherence to funder guidelines.') % {application_name: ApplicationService.application_name} %>
       </p>
     <% else %>
       <p class="left-indent">
