--- a/app/views/sitemaps/_signed_out.html.erb
+++ b/app/views/sitemaps/_signed_out.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <li><%= link_to _('Home'), root_path %></li>
   <li><%= link_to _('Funder requirements'), public_templates_path %></li>
-  <li><%= link_to _('Public DMPs'), public_plans_path %></li>
+  <li><%= link_to _('Public Plans'), public_plans_path %></li>
   <li><%= link_to _('Participating institutions'), public_orgs_path %></li>
   <li><%= link_to _('About'), about_us_path %></li>
   <li><%= link_to _('Contact us'), contact_us_path %></li>
