--- a/app/assets/stylesheets/dmpopidor/_navs.scss
+++ b/app/assets/stylesheets/dmpopidor/_navs.scss
@@ -5,7 +5,8 @@
     background-color: $blue;
 
     li>a {
-      color: $white
+      color: $white;
+      border: 1px solid $dark-blue;
     }
 
     li>a:hover,
@@ -14,7 +15,6 @@
     li.active>a:focus,
     li.active>a:hover {
       color: $blue;
-      border: 1px solid $blue;
       border-bottom-color: transparent;
       background-color: $white;
     }
