fix: select contributor triggering select event on every contributor selects on the form when adding a new contributor via the modal

--- a/engines/madmp_opidor/app/views/dynamic_form/fields/_fragment_select_field.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/fields/_fragment_select_field.html.erb
@@ -1,5 +1,5 @@
-<%# locals: { dmp_id, field_values, parent_id, schema, field_name, template_locale, ttip, multiple } %>
-<% query_id = Digest::MD5.hexdigest("#{parent_id}-#{property_name}") %>
+<%# locals: { dmp_id, field_values, parent_id, schema, field_name, template_locale, ttip, multiple, query_id } %>
+<% query_id ||= Digest::MD5.hexdigest("#{parent_id}-#{property_name}") %>
 <% is_multiple_class = multiple ? "create-contributor" : "single-fragment-selector"%>
 <% unless field_label.nil?%>
   <div class="col-md-12">
