--- a/engines/madmp_opidor/app/views/dynamic_form/fields/contributor/_contributor_field.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/fields/contributor/_contributor_field.html.erb
@@ -29,6 +29,7 @@
         field_id: nil, field_name: "#{f.object_name}[person]",
         validation: nil,
         multiple: true,
+        query_id:,
         field_label: person_label, ttip: person_tooltip, answer_id: nil 
         }
       ) %>
