--- a/engines/madmp_opidor/app/views/dynamic_form/linked_fragment/_list.html.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/linked_fragment/_list.html.erb
@@ -24,6 +24,7 @@
                 :parent_id => parent_id, 
                 :schema_id => schema_id,
                 :template_locale => template_locale,
+                :property_name => property_name,
                 :source => "list-modal",
                 :query_id => query_id
             ), {
