refactor: use react-query and simplify news page

--- a/app/views/branded/home/_welcome.html.erb
+++ b/app/views/branded/home/_welcome.html.erb
@@ -10,6 +10,6 @@
     </div>
   </div>
   <div class="row">
-    <dmp-homepage-news-page/>
+    <dmp-news-page props-json='{ "locale": "<%= locale %>" } '/>
   </div>
 </div>
