--- a/app/views/branded/static_pages/news_feed.html.erb
+++ b/app/views/branded/static_pages/news_feed.html.erb
@@ -4,5 +4,5 @@
   <h2>
     <%= _('Latest news'	)%>
   </h2>
-  <dmp-news-page/>
+  <dmp-news-page props-json='{ "locale": "<%= locale %>", "size": 13 } '/>
 </div>
