Match recaptcha language to app's language

--- a/app/views/shared/_create_account_form.html.erb
+++ b/app/views/shared/_create_account_form.html.erb
@@ -44,7 +44,7 @@
   <% if Rails.configuration.x.recaptcha.enabled %>
     <div class="form-group">
       <%= label_tag(nil, _('Security check')) %>
-      <%= recaptcha_tags %>
+      <%= recaptcha_tags(hl: @current_locale) %>
     </div>
   <% end %>
   <%= f.button(_('Create account'), class: "btn btn-default", type: "submit") %>
