--- a/app/views/contact_us/contacts/_new_left.html.erb
+++ b/app/views/contact_us/contacts/_new_left.html.erb
@@ -37,7 +37,7 @@
 <% if !user_signed_in? && Rails.configuration.x.recaptcha.enabled then %>
     <div class="form-group">
         <%= label_tag(nil, _('Security check')) %>
-        <%= recaptcha_tags %>
+        <%= recaptcha_tags(hl: @current_locale) %>
     </div>
 <% end %>
     <%= f.button(_('Submit'), class: "btn btn-default", type: "submit") %>
