--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -28,7 +28,7 @@
       <% if Rails.configuration.x.recaptcha.enabled %>
         <div class="form-group">
           <%= label_tag(nil, _('Security check')) %>
-          <%= recaptcha_tags %>
+          <%= recaptcha_tags(hl: @current_locale) %>
         </div>
       <% end %>
 
