--- a/app/views/branded/layouts/_signin_signout.html.erb
+++ b/app/views/branded/layouts/_signin_signout.html.erb
@@ -113,7 +113,7 @@
       <% end %>
     </div>
   <% else %>
-    <a href="<%= login_path %>#content">
+    <a href="<%= login_path %>?place=signin#content">
       <%= _('My Account') %>
     </a>
     <div class="sign-in">
